Cannot animate Object Info Color in Cycles with Persistent Data ticked #93007

Closed
opened 2021-11-11 11:19:15 +01:00 by Mike Futcher · 9 comments

System Information
Various Machines Running Windows

Blender Version
3.1
3.0
2.93.5

Short description of error
Cannot animate Object Info Color in Cycles with Persistent Data ticked

Exact steps for others to reproduce the error
Select the Cube
Open Shader Editor
Add Object Info
Link Object Info Color to Principled Base Color
Goto Object Settings
Keyframe Viewport Display > Color Red on frame 1, Green of frame 20
In EEVEE this works fine - the cube fades from red to green.
Swap to Cycles
Goto Viewport Shading
Drag the timeline or press play .... no changes to the colour!
In Render Properties tick Final Render > Persistent Data
Render an animation (you may want to make the animation end on frame 20 to save time) ... The cube does not change colour.

As I outline in https://youtu.be/o4IXviNtxzs?t=301 , there are advantages to animating Object Color to animate materials... it shows up in timelines, etc.bug - object info colour.blend

**System Information** Various Machines Running Windows **Blender Version** 3.1 3.0 2.93.5 **Short description of error** Cannot animate Object Info Color in Cycles with Persistent Data ticked **Exact steps for others to reproduce the error** Select the Cube Open Shader Editor Add Object Info Link Object Info Color to Principled Base Color Goto Object Settings Keyframe Viewport Display > Color Red on frame 1, Green of frame 20 In EEVEE this works fine - the cube fades from red to green. Swap to Cycles Goto Viewport Shading Drag the timeline or press play .... no changes to the colour! In Render Properties tick Final Render > Persistent Data Render an animation (you may want to make the animation end on frame 20 to save time) ... The cube does not change colour. As I outline in https://youtu.be/o4IXviNtxzs?t=301 , there are advantages to animating Object Color to animate materials... it shows up in timelines, etc.[bug - object info colour.blend](https://archive.blender.org/developer/F11793359/bug_-_object_info_colour.blend)
Author

Added subscriber: @MikeFutcher

Added subscriber: @MikeFutcher

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm. Still true in 3.0

related fixes:

Can confirm. Still true in 3.0 related fixes: - cd05a05bca - cedd8b8c56

This issue was referenced by b82b608e91

This issue was referenced by b82b608e91e868ad9afef675e63051b6401d6a7e

This issue was referenced by 63aa10802b

This issue was referenced by 63aa10802b32d7c31ef6c47ea95eff6ad486d967

This issue was referenced by 9f5290e3bc

This issue was referenced by 9f5290e3bc5624154839f3a3771f6f14eea20322

This issue was referenced by 76105eb752

This issue was referenced by 76105eb752ed554975c9f6296bcfb9e86ccbd572

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-12 17:11:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93007
No description provided.