Fix T93007: Cycles not updating for animated Object properties like color